--- a/index.html
+++ b/index.html
@@ -52,40 +52,80 @@
     </nav>
 
     <div class="container">
-        <div class="row">
-            <div class="col mt-4" style="overflow: scroll;">
-                <table class="table table-striped" id="opinions">
-                    <script>
-                        $(document).ready(function () {
-                            $('#opinions').DataTable({
-                                "ajax": { url: "39562616.json", dataSrc: "" },
-                                columns: [
-                                    { data: 'opinion_id', title: 'ID opinii' },
-                                    { data: 'author', title: 'Autor' },
-                                    { data: 'content', title: 'Treść' },
-                                    { data: 'stars', title: 'Gwiazdki' },
-                                    { data: 'recommendation', title: 'Rekomentacja' },
-                                    { data: 'pros', title: 'Lista zalet' },
-                                    { data: 'cons', title: 'Lista wad' },
-                                    { data: 'useful_count', title: 'Przydatna' },
-                                    { data: 'unuseful_count', title: 'Nieptrzydatna' },
-                                    { data: 'purchased', title: 'Potwierdzona zakupem' },
-                                    { data: 'opinion_date', title: 'Data wystawienia' },
-                                    { data: 'purchase_date', title: 'Data zakupu' }
-                                ]
-                            })
-                        });
-                    </script>
+        <div class="row mt-5" style="overflow: scroll;">
+            <div class="col">
+                <table class="table table-striped table-hover" id="opinions">
+                    <thead>
+                        <tr>
+                            <th>Id opinii</th>
+                            <th>Autor</th>
+                            <th>Rekomendacja</th>
+                            <th>Liczba gwiazdek</th>
+                            <th>Treść</th>
+                            <th>Lista zalet</th>
+                            <th>Lista wad</th>
+                            <th>Potwierdzona zakupem</th>
+                            <th>Data wystawienia</th>
+                            <th>Data zakupu</th>
+                            <th>Przydatna</th>
+                            <th>Nieprzydatna</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <script>
+                            $.getJSON("39562616.json", function (data) {
+                                var opinion = '';
+                                // ITERATING THROUGH OBJECTS
+                                $.each(data, function (key, value) {
+                                    //CONSTRUCTION OF ROWS HAVING
+                                    // DATA FROM JSON OBJECT
+                                    opinion += '<tr>';
+                                    opinion += '<td>' +
+                                        value.opinion_id + '</td>';
+                                    opinion += '<td>' +
+                                        value.author + '</td>';
+                                    opinion += '<td>' +
+                                        value.recommendation + '</td>';
+                                    opinion += '<td>' +
+                                        value.stars + '</td>';
+                                    opinion += '<td>' +
+                                        value.content.substring(0, 20) + '</td>';
+                                    opinion += '<td>' +
+                                        value.pros + '</td>';
+                                    opinion += '<td>' +
+                                        value.cons + '</td>';
+                                    opinion += '<td>' +
+                                        (value.purchased ? 'TAK' : 'NIE') + '</td>';
+                                    opinion += '<td>' +
+                                        value.opinion_date + '</td>';
+                                    opinion += '<td>' +
+                                        (value.purchase_date ? value.purchase_date : "") + '</td>';
+                                    opinion += '<td>' +
+                                        value.useful_count + '</td>';
+                                    opinion += '<td>' +
+                                        value.unuseful_count + '</td>';
+                                    opinion += '</tr>';
+                                });
+                                //INSERTING ROWS INTO TABLE 
+                                $('#opinions').append(opinion);
+                            });
+                        </script>
+                    </tbody>
                 </table>
             </div>
         </div>
     </div>
-
+    <footer>
+        <p class="m-4">&copy; Daniel Cachro</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.min.js"
+        integrity="sha512-mlz/Fs1VtBou2TrUkGzX4VoGvybkD9nkeXWJm3rle0DPHssYYx4j+8kIS15T78ttGfmOjH0lLaBXGcShaVkdkg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
