--- a/charts.html
+++ b/charts.html
@@ -57,17 +57,17 @@
             <canvas id="stars"></canvas>
             <script>
                 const data = [
-                    { stars: 0.0, count: 0 },
-                    { stars: 0.5, count: 3 },
-                    { stars: 1.0, count: 1 },
-                    { stars: 1.5, count: 2 },
-                    { stars: 2.0, count: 1 },
-                    { stars: 2.5, count: 0 },
-                    { stars: 3.0, count: 5 },
-                    { stars: 3.5, count: 3 },
-                    { stars: 4.0, count: 19 },
-                    { stars: 4.5, count: 19 },
-                    { stars: 5.0, count: 79 },
+                    { stars: 0.0, count: 0, bgcolor: "#FFB6C1", bgborder: "#DC143C" },
+                    { stars: 0.5, count: 3, bgcolor: "#FFB6C1", bgborder: "#DC143C" },
+                    { stars: 1.0, count: 1, bgcolor: "#FFB6C1", bgborder: "#DC143C" },
+                    { stars: 1.5, count: 2, bgcolor: "#FFB6C1", bgborder: "#DC143C" },
+                    { stars: 2.0, count: 1, bgcolor: "#FFB6C1", bgborder: "#DC143C" },
+                    { stars: 2.5, count: 0, bgcolor: "#FFB6C1", bgborder: "#DC143C" },
+                    { stars: 3.0, count: 5, bgcolor: "#B0E0E6", bgborder: "#4682B4" },
+                    { stars: 3.5, count: 3, bgcolor: "#B0E0E6", bgborder: "#4682B4" },
+                    { stars: 4.0, count: 19, bgcolor: "#BDFCC9", bgborder: "#228B22" },
+                    { stars: 4.5, count: 19, bgcolor: "#BDFCC9", bgborder: "#228B22" },
+                    { stars: 5.0, count: 79, bgcolor: "#BDFCC9", bgborder: "#228B22" },
                 ];
 
                 new Chart(
@@ -79,7 +79,10 @@
                             datasets: [
                                 {
                                     label: 'Liczba opinii',
-                                    data: data.map(row => row.count)
+                                    data: data.map(row => row.count),
+                                    backgroundColor: data.map(row => row.bgcolor),
+                                    borderColor: data.map(row => row.bgborder),
+                                    borderWidth: 1
                                 }
                             ]
                         },
@@ -105,6 +108,48 @@
                                         display: true,
                                         text: 'Liczba opinii'
                                     }
+                                }
+                            },
+                        },
+                    }
+                );
+            </script>
+        </div>
+        <div class="row">
+            <div class="mt-5"></div>
+            <canvas id="recommendation"
+                style="display: flex; align-items: center; justify-content: center; max-height: 40vw"></canvas>
+            <script>
+                const dataRecommendation = [
+                    { recommendation: "Polecam", count: 19, bgcolor: "#BDFCC9", bgborder: "#228B22" },
+                    { recommendation: "Nie mam zdania", count: 5, bgcolor: "#B0E0E6", bgborder: "#4682B4" },
+                    { recommendation: "Nie polecam", count: 3, bgcolor: "#FFB6C1", bgborder: "#DC143C" },
+                ];
+
+                new Chart(
+                    document.getElementById('recommendation'),
+                    {
+                        type: 'doughnut',
+                        data: {
+                            labels: dataRecommendation.map(row => row.recommendation),
+                            datasets: [
+                                {
+                                    label: 'Liczba rekomendacji',
+                                    data: dataRecommendation.map(row => row.count),
+                                    backgroundColor: dataRecommendation.map(row => row.bgcolor),
+                                    borderColor: dataRecommendation.map(row => row.bgborder),
+                                    borderWidth: 1
+                                }
+                            ]
+                        },
+                        options: {
+                            plugins: {
+                                legend: {
+                                    display: true,
+                                },
+                                title: {
+                                    display: true,
+                                    text: 'Rozkład rekomendacji'
                                 }
                             },
                         },
