--- a/opinions.html
+++ b/opinions.html
@@ -52,7 +52,7 @@
     </nav>
 
     <div class="container">
-        <div class="row mt-5" style="overflow: scroll;">
+        <div class="row mt-5" style="overflow: scroll; max-height: 80vh;">
             <div class="col">
                 <table class="table table-striped table-hover" id="opinions">
                     <thead>
